compiler/testData/multiplatform/classScopes/functionIncorrectSignature/output.txt
-- Common --
Exit code: OK
Output:

-- JVM --
Exit code: COMPILATION_ERROR
Output:
compiler/testData/multiplatform/classScopes/functionIncorrectSignature/jvm.kt:2:5: error: 'impl' function 'function' has no corresponding 'header' declaration
The following declaration is incompatible because return type is different:
    public final expect fun function(b: ByteArray): Int

    actual fun function(b: ByteArray): Long = b.size.toLong()
    ^
